--- a/.jshintrc
+++ b/.jshintrc
@@ -18,6 +18,8 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "OAuth": false,
+    "$": false
   }
 }
